deploy/opengauss-reproducible/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-reproducible
  name: opengauss-reproducible
