deploy/opengauss-reproducible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: opengauss-reproducible
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: opengauss-reproducible
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: server
  type: ClusterIP
